
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct lev_start {scalar_t__ schema_id; scalar_t__ split_min; scalar_t__ split_max; scalar_t__ split_mod; } ;


 scalar_t__ COPYEXEC_MAIN_SCHEMA_V1 ;
 scalar_t__ COPYEXEC_RESULT_SCHEMA_V1 ;
 int assert (int) ;
 scalar_t__ log_split_max ;
 scalar_t__ log_split_min ;
 scalar_t__ log_split_mod ;

__attribute__((used)) static int copyexec_main_le_start (struct lev_start *E) {
  if (E->schema_id != COPYEXEC_MAIN_SCHEMA_V1 && E->schema_id != COPYEXEC_RESULT_SCHEMA_V1) {
    return -1;
  }
  log_split_min = E->split_min;
  log_split_max = E->split_max;
  log_split_mod = E->split_mod;
  assert (log_split_mod > 0 && log_split_min >= 0 && log_split_min + 1 == log_split_max && log_split_max <= log_split_mod);

  return 0;
}
